Pull master of cf-deployment.

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -137,7 +137,7 @@ resources:
 - name: cf-deployment
   type: git
   source:
-    branch: develop
+    branch: master
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
 - name: concourse-deployment
